ports/PIC24-dsPIC33/parser.out
Grammar:

Rule 0     S' -> prog
Rule 1     prog -> topLevelDecls
Rule 2     topLevelDecls -> topLevelDecls topLevelDecl eos
Rule 3     topLevelDecls -> topLevelDecl eos
Rule 4     topLevelDecl -> declaration
Rule 5     declaration -> varDecl
Rule 6     varDecl -> identifierList DECL_ASGN expressionList
Rule 7     identifierList -> identifierList , IDENTIFIER
Rule 8     identifierList -> IDENTIFIER
Rule 9     expressionList -> expressionList , expression
Rule 10    expressionList -> expression
Rule 11    expression -> unaryExpr BINARY_OP unaryExpr
Rule 12    expression -> unaryExpr
Rule 13    unaryExpr -> UNARY_OP unaryExpr  [precedence=right, level=7]
Rule 14    unaryExpr -> primaryExpr
Rule 15    primaryExpr -> conversion
Rule 16    primaryExpr -> operand
Rule 17    operand -> ( expression )
Rule 18    operand -> operandName
Rule 19    operand -> literal
Rule 20    operandName -> qualifiedIdent
Rule 21    operandName -> IDENTIFIER
Rule 22    literal -> basicLit
Rule 23    conversion -> type_ ( expression )
Rule 24    type_ -> qualifiedIdent
Rule 25    type_ -> typeName
Rule 26    qualifiedIdent -> IDENTIFIER . IDENTIFIER
Rule 27    typeName -> numericType
Rule 28    typeName -> BOOL
Rule 29    typeName -> RUNE
Rule 30    numericType -> ISIZE
Rule 31    numericType -> USIZE
Rule 32    numericType -> I64
Rule 33    numericType -> I32
Rule 34    numericType -> I16
Rule 35    numericType -> I8
Rule 36    numericType -> U64
Rule 37    numericType -> U32
Rule 38    numericType -> U16
Rule 39    numericType -> U8
Rule 40    numericType -> F32
Rule 41    numericType -> F64
Rule 42    basicLit -> INT_LIT
Rule 43    basicLit -> FLOAT_LIT
Rule 44    basicLit -> FALSE
Rule 45    basicLit -> TRUE
Rule 46    basicLit -> RUNE_LIT
Rule 47    basicLit -> STRING_LIT
Rule 48    INT_LIT -> HEX_LIT
Rule 49    INT_LIT -> OCTAL_LIT
Rule 50    INT_LIT -> BINARY_LIT
Rule 51    INT_LIT -> DECIMAL_LIT
Rule 52    eos -> eos NEWL
Rule 53    eos -> NEWL
Rule 54    eos -> eos ;
Rule 55    eos -> ;
Rule 56    BINARY_OP -> MUL_OP
Rule 57    BINARY_OP -> ADD_OP
Rule 58    BINARY_OP -> REL_OP
Rule 59    BINARY_OP -> LOGIC_AND  [precedence=left, level=2]
Rule 60    BINARY_OP -> LOGIC_OR  [precedence=left, level=1]
Rule 61    REL_OP -> GE  [precedence=left, level=3]
Rule 62    REL_OP -> GT  [precedence=left, level=3]
Rule 63    REL_OP -> LE  [precedence=left, level=3]
Rule 64    REL_OP -> LT  [precedence=left, level=3]
Rule 65    REL_OP -> NE  [precedence=left, level=3]
Rule 66    REL_OP -> EQ  [precedence=left, level=3]
Rule 67    ADD_OP -> XOR  [precedence=left, level=4]
Rule 68    ADD_OP -> OR  [precedence=left, level=4]
Rule 69    ADD_OP -> MINUS  [precedence=left, level=4]
Rule 70    ADD_OP -> PLUS  [precedence=left, level=4]
Rule 71    MUL_OP -> SHR  [precedence=left, level=5]
Rule 72    MUL_OP -> SHL  [precedence=left, level=5]
Rule 73    MUL_OP -> AND  [precedence=left, level=5]
Rule 74    MUL_OP -> MOD  [precedence=left, level=5]
Rule 75    MUL_OP -> DIV  [precedence=left, level=5]
Rule 76    MUL_OP -> STAR  [precedence=left, level=5]
Rule 77    UNARY_OP -> AND  [precedence=left, level=5]
Rule 78    UNARY_OP -> EXCLM
Rule 79    UNARY_OP -> MINUS  [precedence=left, level=4]

Unused terminals:

    TYPE
    PLUS_PLUS
    IF
    UMINUS
    SHL_ASGN
    MINUS_MINUS
    MAP
    FOR
    FN
    STATIC
    OR_ASGN
    SHR_ASGN
    IN
    MATCH
    RETURN
    BREAK
    MOD_ASGN
    ENUM
    IMPORT
    STAR_ASGN
    ASSIGN
    CONST
    CONTINUE
    ELSE
    MINUS_ASGN
    STRUCT
    AND_ASGN
    AS
    XOR_ASGN
    DIV_ASGN
    PLUS_ASGN

Terminals, with rules where they appear:

(                    : 17 23
)                    : 17 23
,                    : 7 9
.                    : 26
;                    : 54 55
AND                  : 73 77
AND_ASGN             : 
AS                   : 
ASSIGN               : 
BINARY_LIT           : 50
BOOL                 : 28
BREAK                : 
CONST                : 
CONTINUE             : 
DECIMAL_LIT          : 51
DECL_ASGN            : 6
DIV                  : 75
DIV_ASGN             : 
ELSE                 : 
ENUM                 : 
EQ                   : 66
EXCLM                : 78
F32                  : 40
F64                  : 41
FALSE                : 44
FLOAT_LIT            : 43
FN                   : 
FOR                  : 
GE                   : 61
GT                   : 62
HEX_LIT              : 48
I16                  : 34
I32                  : 33
I64                  : 32
I8                   : 35
IDENTIFIER           : 7 8 21 26 26
IF                   : 
IMPORT               : 
IN                   : 
ISIZE                : 30
LE                   : 63
LOGIC_AND            : 59
LOGIC_OR             : 60
LT                   : 64
MAP                  : 
MATCH                : 
MINUS                : 69 79
MINUS_ASGN           : 
MINUS_MINUS          : 
MOD                  : 74
MOD_ASGN             : 
NE                   : 65
NEWL                 : 52 53
OCTAL_LIT            : 49
OR                   : 68
OR_ASGN              : 
PLUS                 : 70
PLUS_ASGN            : 
PLUS_PLUS            : 
RETURN               : 
RUNE                 : 29
RUNE_LIT             : 46
SHL                  : 72
SHL_ASGN             : 
SHR                  : 71
SHR_ASGN             : 
STAR                 : 76
STAR_ASGN            : 
STATIC               : 
STRING_LIT           : 47
STRUCT               : 
TRUE                 : 45
TYPE                 : 
U16                  : 38
U32                  : 37
U64                  : 36
U8                   : 39
UMINUS               : 
USIZE                : 31
XOR                  : 67
XOR_ASGN             : 
error                : 

Nonterminals, with rules where they appear:

ADD_OP               : 57
BINARY_OP            : 11
INT_LIT              : 42
MUL_OP               : 56
REL_OP               : 58
UNARY_OP             : 13
basicLit             : 22
conversion           : 15
declaration          : 4
eos                  : 2 3 52 54
expression           : 9 10 17 23
expressionList       : 6 9
identifierList       : 6 7
literal              : 19
numericType          : 27
operand              : 16
operandName          : 18
primaryExpr          : 14
prog                 : 0
qualifiedIdent       : 20 24
topLevelDecl         : 2 3
topLevelDecls        : 1 2
typeName             : 25
type_                : 23
unaryExpr            : 11 11 12 13
varDecl              : 5


state 0

    (0) S' -> . prog
    (1) prog -> . topLevelDecls
    (2) topLevelDecls -> . topLevelDecls topLevelDecl eos
    (3) topLevelDecls -> . topLevelDecl eos
    (4) topLevelDecl -> . declaration
    (5) declaration -> . varDecl
    (6) varDecl -> . identifierList DECL_ASGN expressionList
    (7) identifierList -> . identifierList , IDENTIFIER
    (8) identifierList -> . IDENTIFIER
    IDENTIFIER      shift and go to state 7

    prog                           shift and go to state 1
    topLevelDecls                  shift and go to state 2
    topLevelDecl                   shift and go to state 3
    declaration                    shift and go to state 4
    varDecl                        shift and go to state 5
    identifierList                 shift and go to state 6

state 1

    (0) S' -> prog .


state 2

    (1) prog -> topLevelDecls .
    (2) topLevelDecls -> topLevelDecls . topLevelDecl eos
    (4) topLevelDecl -> . declaration
    (5) declaration -> . varDecl
    (6) varDecl -> . identifierList DECL_ASGN expressionList
    (7) identifierList -> . identifierList , IDENTIFIER
    (8) identifierList -> . IDENTIFIER
    $end            reduce using rule 1 (prog -> topLevelDecls .)
    IDENTIFIER      shift and go to state 7

    topLevelDecl                   shift and go to state 8
    declaration                    shift and go to state 4
    varDecl                        shift and go to state 5
    identifierList                 shift and go to state 6

state 3

    (3) topLevelDecls -> topLevelDecl . eos
    (52) eos -> . eos NEWL
    (53) eos -> . NEWL
    (54) eos -> . eos ;
    (55) eos -> . ;
    NEWL            shift and go to state 10
    ;               shift and go to state 11

    eos                            shift and go to state 9

state 4

    (4) topLevelDecl -> declaration .
    NEWL            reduce using rule 4 (topLevelDecl -> declaration .)
    ;               reduce using rule 4 (topLevelDecl -> declaration .)


state 5

    (5) declaration -> varDecl .
    NEWL            reduce using rule 5 (declaration -> varDecl .)
    ;               reduce using rule 5 (declaration -> varDecl .)


state 6

    (6) varDecl -> identifierList . DECL_ASGN expressionList
    (7) identifierList -> identifierList . , IDENTIFIER
    DECL_ASGN       shift and go to state 12
    ,               shift and go to state 13


state 7

    (8) identifierList -> IDENTIFIER .
    DECL_ASGN       reduce using rule 8 (identifierList -> IDENTIFIER .)
    ,               reduce using rule 8 (identifierList -> IDENTIFIER .)


state 8

    (2) topLevelDecls -> topLevelDecls topLevelDecl . eos
    (52) eos -> . eos NEWL
    (53) eos -> . NEWL
    (54) eos -> . eos ;
    (55) eos -> . ;
    NEWL            shift and go to state 10
    ;               shift and go to state 11

    eos                            shift and go to state 14

state 9

    (3) topLevelDecls -> topLevelDecl eos .
    (52) eos -> eos . NEWL
    (54) eos -> eos . ;
    IDENTIFIER      reduce using rule 3 (topLevelDecls -> topLevelDecl eos .)
    $end            reduce using rule 3 (topLevelDecls -> topLevelDecl eos .)
    NEWL            shift and go to state 15
    ;               shift and go to state 16


state 10

    (53) eos -> NEWL .
    NEWL            reduce using rule 53 (eos -> NEWL .)
    ;               reduce using rule 53 (eos -> NEWL .)
    IDENTIFIER      reduce using rule 53 (eos -> NEWL .)
    $end            reduce using rule 53 (eos -> NEWL .)


state 11

    (55) eos -> ; .
    NEWL            reduce using rule 55 (eos -> ; .)
    ;               reduce using rule 55 (eos -> ; .)
    IDENTIFIER      reduce using rule 55 (eos -> ; .)
    $end            reduce using rule 55 (eos -> ; .)


state 12

    (6) varDecl -> identifierList DECL_ASGN . expressionList
    (9) expressionList -> . expressionList , expression
    (10) expressionList -> . expression
    (11) expression -> . unaryExpr BINARY_OP unaryExpr
    (12) expression -> . unaryExpr
    (13) unaryExpr -> . UNARY_OP unaryExpr
    (14) unaryExpr -> . primaryExpr
    (77) UNARY_OP -> . AND
    (78) UNARY_OP -> . EXCLM
    (79) UNARY_OP -> . MINUS
    (15) primaryExpr -> . conversion
    (16) primaryExpr -> . operand
    (23) conversion -> . type_ ( expression )
    (17) operand -> . ( expression )
    (18) operand -> . operandName
    (19) operand -> . literal
    (24) type_ -> . qualifiedIdent
    (25) type_ -> . typeName
    (20) operandName -> . qualifiedIdent
    (21) operandName -> . IDENTIFIER
    (22) literal -> . basicLit
    (26) qualifiedIdent -> . IDENTIFIER . IDENTIFIER
    (27) typeName -> . numericType
    (28) typeName -> . BOOL
    (29) typeName -> . RUNE
    (42) basicLit -> . INT_LIT
    (43) basicLit -> . FLOAT_LIT
    (44) basicLit -> . FALSE
    (45) basicLit -> . TRUE
    (46) basicLit -> . RUNE_LIT
    (47) basicLit -> . STRING_LIT
    (30) numericType -> . ISIZE
    (31) numericType -> . USIZE
    (32) numericType -> . I64
    (33) numericType -> . I32
    (34) numericType -> . I16
    (35) numericType -> . I8
    (36) numericType -> . U64
    (37) numericType -> . U32
    (38) numericType -> . U16
    (39) numericType -> . U8
    (40) numericType -> . F32
    (41) numericType -> . F64
    (48) INT_LIT -> . HEX_LIT
    (49) INT_LIT -> . OCTAL_LIT
    (50) INT_LIT -> . BINARY_LIT
    (51) INT_LIT -> . DECIMAL_LIT
    AND             shift and go to state 22
    EXCLM           shift and go to state 23
    MINUS           shift and go to state 24
    (               shift and go to state 28
    IDENTIFIER      shift and go to state 33
    BOOL            shift and go to state 36
    RUNE            shift and go to state 37
    FLOAT_LIT       shift and go to state 39
    FALSE           shift and go to state 40
    TRUE            shift and go to state 41
    RUNE_LIT        shift and go to state 42
    STRING_LIT      shift and go to state 43
    ISIZE           shift and go to state 44
    USIZE           shift and go to state 45
    I64             shift and go to state 46
    I32             shift and go to state 47
    I16             shift and go to state 48
    I8              shift and go to state 49
    U64             shift and go to state 50
    U32             shift and go to state 51
    U16             shift and go to state 52
    U8              shift and go to state 53
    F32             shift and go to state 54
    F64             shift and go to state 55
    HEX_LIT         shift and go to state 56
    OCTAL_LIT       shift and go to state 57
    BINARY_LIT      shift and go to state 58
    DECIMAL_LIT     shift and go to state 59

    expressionList                 shift and go to state 17
    expression                     shift and go to state 18
    unaryExpr                      shift and go to state 19
    UNARY_OP                       shift and go to state 20
    primaryExpr                    shift and go to state 21
    conversion                     shift and go to state 25
    operand                        shift and go to state 26
    type_                          shift and go to state 27
    operandName                    shift and go to state 29
    literal                        shift and go to state 30
    qualifiedIdent                 shift and go to state 31
    typeName                       shift and go to state 32
    basicLit                       shift and go to state 34
    numericType                    shift and go to state 35
    INT_LIT                        shift and go to state 38

state 13

    (7) identifierList -> identifierList , . IDENTIFIER
    IDENTIFIER      shift and go to state 60


state 14

    (2) topLevelDecls -> topLevelDecls topLevelDecl eos .
    (52) eos -> eos . NEWL
    (54) eos -> eos . ;
    IDENTIFIER      reduce using rule 2 (topLevelDecls -> topLevelDecls topLevelDecl eos .)
    $end            reduce using rule 2 (topLevelDecls -> topLevelDecls topLevelDecl eos .)
    NEWL            shift and go to state 15
    ;               shift and go to state 16


state 15

    (52) eos -> eos NEWL .
    NEWL            reduce using rule 52 (eos -> eos NEWL .)
    ;               reduce using rule 52 (eos -> eos NEWL .)
    IDENTIFIER      reduce using rule 52 (eos -> eos NEWL .)
    $end            reduce using rule 52 (eos -> eos NEWL .)


state 16

    (54) eos -> eos ; .
    NEWL            reduce using rule 54 (eos -> eos ; .)
    ;               reduce using rule 54 (eos -> eos ; .)
    IDENTIFIER      reduce using rule 54 (eos -> eos ; .)
    $end            reduce using rule 54 (eos -> eos ; .)


state 17

    (6) varDecl -> identifierList DECL_ASGN expressionList .
    (9) expressionList -> expressionList . , expression
    NEWL            reduce using rule 6 (varDecl -> identifierList DECL_ASGN expressionList .)
    ;               reduce using rule 6 (varDecl -> identifierList DECL_ASGN expressionList .)
    ,               shift and go to state 61


state 18

    (10) expressionList -> expression .
    ,               reduce using rule 10 (expressionList -> expression .)
    NEWL            reduce using rule 10 (expressionList -> expression .)
    ;               reduce using rule 10 (expressionList -> expression .)


state 19

    (11) expression -> unaryExpr . BINARY_OP unaryExpr
    (12) expression -> unaryExpr .
    (56) BINARY_OP -> . MUL_OP
    (57) BINARY_OP -> . ADD_OP
    (58) BINARY_OP -> . REL_OP
    (59) BINARY_OP -> . LOGIC_AND
    (60) BINARY_OP -> . LOGIC_OR
    (71) MUL_OP -> . SHR
    (72) MUL_OP -> . SHL
    (73) MUL_OP -> . AND
    (74) MUL_OP -> . MOD
    (75) MUL_OP -> . DIV
    (76) MUL_OP -> . STAR
    (67) ADD_OP -> . XOR
    (68) ADD_OP -> . OR
    (69) ADD_OP -> . MINUS
    (70) ADD_OP -> . PLUS
    (61) REL_OP -> . GE
    (62) REL_OP -> . GT
    (63) REL_OP -> . LE
    (64) REL_OP -> . LT
    (65) REL_OP -> . NE
    (66) REL_OP -> . EQ
    ,               reduce using rule 12 (expression -> unaryExpr .)
    NEWL            reduce using rule 12 (expression -> unaryExpr .)
    ;               reduce using rule 12 (expression -> unaryExpr .)
    )               reduce using rule 12 (expression -> unaryExpr .)
    LOGIC_AND       shift and go to state 66
    LOGIC_OR        shift and go to state 67
    SHR             shift and go to state 68
    SHL             shift and go to state 69
    AND             shift and go to state 70
    MOD             shift and go to state 71
    DIV             shift and go to state 72
    STAR            shift and go to state 73
    XOR             shift and go to state 74
    OR              shift and go to state 75
    MINUS           shift and go to state 76
    PLUS            shift and go to state 77
    GE              shift and go to state 78
    GT              shift and go to state 79
    LE              shift and go to state 80
    LT              shift and go to state 81
    NE              shift and go to state 82
    EQ              shift and go to state 83

    BINARY_OP                      shift and go to state 62
    MUL_OP                         shift and go to state 63
    ADD_OP                         shift and go to state 64
    REL_OP                         shift and go to state 65

state 20

    (13) unaryExpr -> UNARY_OP . unaryExpr
    (13) unaryExpr -> . UNARY_OP unaryExpr
    (14) unaryExpr -> . primaryExpr
    (77) UNARY_OP -> . AND
    (78) UNARY_OP -> . EXCLM
    (79) UNARY_OP -> . MINUS
    (15) primaryExpr -> . conversion
    (16) primaryExpr -> . operand
    (23) conversion -> . type_ ( expression )
    (17) operand -> . ( expression )
    (18) operand -> . operandName
    (19) operand -> . literal
    (24) type_ -> . qualifiedIdent
    (25) type_ -> . typeName
    (20) operandName -> . qualifiedIdent
    (21) operandName -> . IDENTIFIER
    (22) literal -> . basicLit
    (26) qualifiedIdent -> . IDENTIFIER . IDENTIFIER
    (27) typeName -> . numericType
    (28) typeName -> . BOOL
    (29) typeName -> . RUNE
    (42) basicLit -> . INT_LIT
    (43) basicLit -> . FLOAT_LIT
    (44) basicLit -> . FALSE
    (45) basicLit -> . TRUE
    (46) basicLit -> . RUNE_LIT
    (47) basicLit -> . STRING_LIT
    (30) numericType -> . ISIZE
    (31) numericType -> . USIZE
    (32) numericType -> . I64
    (33) numericType -> . I32
    (34) numericType -> . I16
    (35) numericType -> . I8
    (36) numericType -> . U64
    (37) numericType -> . U32
    (38) numericType -> . U16
    (39) numericType -> . U8
    (40) numericType -> . F32
    (41) numericType -> . F64
    (48) INT_LIT -> . HEX_LIT
    (49) INT_LIT -> . OCTAL_LIT
    (50) INT_LIT -> . BINARY_LIT
    (51) INT_LIT -> . DECIMAL_LIT
    AND             shift and go to state 22
    EXCLM           shift and go to state 23
    MINUS           shift and go to state 24
    (               shift and go to state 28
    IDENTIFIER      shift and go to state 33
    BOOL            shift and go to state 36
    RUNE            shift and go to state 37
    FLOAT_LIT       shift and go to state 39
    FALSE           shift and go to state 40
    TRUE            shift and go to state 41
    RUNE_LIT        shift and go to state 42
    STRING_LIT      shift and go to state 43
    ISIZE           shift and go to state 44
    USIZE           shift and go to state 45
    I64             shift and go to state 46
    I32             shift and go to state 47
    I16             shift and go to state 48
    I8              shift and go to state 49
    U64             shift and go to state 50
    U32             shift and go to state 51
    U16             shift and go to state 52
    U8              shift and go to state 53
    F32             shift and go to state 54
    F64             shift and go to state 55
    HEX_LIT         shift and go to state 56
    OCTAL_LIT       shift and go to state 57
    BINARY_LIT      shift and go to state 58
    DECIMAL_LIT     shift and go to state 59

    UNARY_OP                       shift and go to state 20
    unaryExpr                      shift and go to state 84
    primaryExpr                    shift and go to state 21
    conversion                     shift and go to state 25
    operand                        shift and go to state 26
    type_                          shift and go to state 27
    operandName                    shift and go to state 29
    literal                        shift and go to state 30
    qualifiedIdent                 shift and go to state 31
    typeName                       shift and go to state 32
    basicLit                       shift and go to state 34
    numericType                    shift and go to state 35
    INT_LIT                        shift and go to state 38

state 21

    (14) unaryExpr -> primaryExpr .
    LOGIC_AND       reduce using rule 14 (unaryExpr -> primaryExpr .)
    LOGIC_OR        reduce using rule 14 (unaryExpr -> primaryExpr .)
    SHR             reduce using rule 14 (unaryExpr -> primaryExpr .)
    SHL             reduce using rule 14 (unaryExpr -> primaryExpr .)
    AND             reduce using rule 14 (unaryExpr -> primaryExpr .)
    MOD             reduce using rule 14 (unaryExpr -> primaryExpr .)
    DIV             reduce using rule 14 (unaryExpr -> primaryExpr .)
    STAR            reduce using rule 14 (unaryExpr -> primaryExpr .)
    XOR             reduce using rule 14 (unaryExpr -> primaryExpr .)
    OR              reduce using rule 14 (unaryExpr -> primaryExpr .)
    MINUS           reduce using rule 14 (unaryExpr -> primaryExpr .)
    PLUS            reduce using rule 14 (unaryExpr -> primaryExpr .)
    GE              reduce using rule 14 (unaryExpr -> primaryExpr .)
    GT              reduce using rule 14 (unaryExpr -> primaryExpr .)
    LE              reduce using rule 14 (unaryExpr -> primaryExpr .)
    LT              reduce using rule 14 (unaryExpr -> primaryExpr .)
    NE              reduce using rule 14 (unaryExpr -> primaryExpr .)
    EQ              reduce using rule 14 (unaryExpr -> primaryExpr .)
    ,               reduce using rule 14 (unaryExpr -> primaryExpr .)
    NEWL            reduce using rule 14 (unaryExpr -> primaryExpr .)
    ;               reduce using rule 14 (unaryExpr -> primaryExpr .)
    )               reduce using rule 14 (unaryExpr -> primaryExpr .)


state 22

    (77) UNARY_OP -> AND .
    AND             reduce using rule 77 (UNARY_OP -> AND .)
    EXCLM           reduce using rule 77 (UNARY_OP -> AND .)
    MINUS           reduce using rule 77 (UNARY_OP -> AND .)
    (               reduce using rule 77 (UNARY_OP -> AND .)
    IDENTIFIER      reduce using rule 77 (UNARY_OP -> AND .)
    BOOL            reduce using rule 77 (UNARY_OP -> AND .)
    RUNE            reduce using rule 77 (UNARY_OP -> AND .)
    FLOAT_LIT       reduce using rule 77 (UNARY_OP -> AND .)
    FALSE           reduce using rule 77 (UNARY_OP -> AND .)
    TRUE            reduce using rule 77 (UNARY_OP -> AND .)
    RUNE_LIT        reduce using rule 77 (UNARY_OP -> AND .)
    STRING_LIT      reduce using rule 77 (UNARY_OP -> AND .)
    ISIZE           reduce using rule 77 (UNARY_OP -> AND .)
    USIZE           reduce using rule 77 (UNARY_OP -> AND .)
    I64             reduce using rule 77 (UNARY_OP -> AND .)
    I32             reduce using rule 77 (UNARY_OP -> AND .)
    I16             reduce using rule 77 (UNARY_OP -> AND .)
    I8              reduce using rule 77 (UNARY_OP -> AND .)
    U64             reduce using rule 77 (UNARY_OP -> AND .)
    U32             reduce using rule 77 (UNARY_OP -> AND .)
    U16             reduce using rule 77 (UNARY_OP -> AND .)
    U8              reduce using rule 77 (UNARY_OP -> AND .)
    F32             reduce using rule 77 (UNARY_OP -> AND .)
    F64             reduce using rule 77 (UNARY_OP -> AND .)
    HEX_LIT         reduce using rule 77 (UNARY_OP -> AND .)
    OCTAL_LIT       reduce using rule 77 (UNARY_OP -> AND .)
    BINARY_LIT      reduce using rule 77 (UNARY_OP -> AND .)
    DECIMAL_LIT     reduce using rule 77 (UNARY_OP -> AND .)


state 23

    (78) UNARY_OP -> EXCLM .
    AND             reduce using rule 78 (UNARY_OP -> EXCLM .)
    EXCLM           reduce using rule 78 (UNARY_OP -> EXCLM .)
    MINUS           reduce using rule 78 (UNARY_OP -> EXCLM .)
    (               reduce using rule 78 (UNARY_OP -> EXCLM .)
    IDENTIFIER      reduce using rule 78 (UNARY_OP -> EXCLM .)
    BOOL            reduce using rule 78 (UNARY_OP -> EXCLM .)
    RUNE            reduce using rule 78 (UNARY_OP -> EXCLM .)
    FLOAT_LIT       reduce using rule 78 (UNARY_OP -> EXCLM .)
    FALSE           reduce using rule 78 (UNARY_OP -> EXCLM .)
    TRUE            reduce using rule 78 (UNARY_OP -> EXCLM .)
    RUNE_LIT        reduce using rule 78 (UNARY_OP -> EXCLM .)
    STRING_LIT      reduce using rule 78 (UNARY_OP -> EXCLM .)
    ISIZE           reduce using rule 78 (UNARY_OP -> EXCLM .)
    USIZE           reduce using rule 78 (UNARY_OP -> EXCLM .)
    I64             reduce using rule 78 (UNARY_OP -> EXCLM .)
    I32             reduce using rule 78 (UNARY_OP -> EXCLM .)
    I16             reduce using rule 78 (UNARY_OP -> EXCLM .)
    I8              reduce using rule 78 (UNARY_OP -> EXCLM .)
    U64             reduce using rule 78 (UNARY_OP -> EXCLM .)
    U32             reduce using rule 78 (UNARY_OP -> EXCLM .)
    U16             reduce using rule 78 (UNARY_OP -> EXCLM .)
    U8              reduce using rule 78 (UNARY_OP -> EXCLM .)
    F32             reduce using rule 78 (UNARY_OP -> EXCLM .)
    F64             reduce using rule 78 (UNARY_OP -> EXCLM .)
    HEX_LIT         reduce using rule 78 (UNARY_OP -> EXCLM .)
    OCTAL_LIT       reduce using rule 78 (UNARY_OP -> EXCLM .)
    BINARY_LIT      reduce using rule 78 (UNARY_OP -> EXCLM .)
    DECIMAL_LIT     reduce using rule 78 (UNARY_OP -> EXCLM .)


state 24

    (79) UNARY_OP -> MINUS .
    AND             reduce using rule 79 (UNARY_OP -> MINUS .)
    EXCLM           reduce using rule 79 (UNARY_OP -> MINUS .)
    MINUS           reduce using rule 79 (UNARY_OP -> MINUS .)
    (               reduce using rule 79 (UNARY_OP -> MINUS .)
    IDENTIFIER      reduce using rule 79 (UNARY_OP -> MINUS .)
    BOOL            reduce using rule 79 (UNARY_OP -> MINUS .)
    RUNE            reduce using rule 79 (UNARY_OP -> MINUS .)
    FLOAT_LIT       reduce using rule 79 (UNARY_OP -> MINUS .)
    FALSE           reduce using rule 79 (UNARY_OP -> MINUS .)
    TRUE            reduce using rule 79 (UNARY_OP -> MINUS .)
    RUNE_LIT        reduce using rule 79 (UNARY_OP -> MINUS .)
    STRING_LIT      reduce using rule 79 (UNARY_OP -> MINUS .)
    ISIZE           reduce using rule 79 (UNARY_OP -> MINUS .)
    USIZE           reduce using rule 79 (UNARY_OP -> MINUS .)
    I64             reduce using rule 79 (UNARY_OP -> MINUS .)
    I32             reduce using rule 79 (UNARY_OP -> MINUS .)
    I16             reduce using rule 79 (UNARY_OP -> MINUS .)
    I8              reduce using rule 79 (UNARY_OP -> MINUS .)
    U64             reduce using rule 79 (UNARY_OP -> MINUS .)
    U32             reduce using rule 79 (UNARY_OP -> MINUS .)
    U16             reduce using rule 79 (UNARY_OP -> MINUS .)
    U8              reduce using rule 79 (UNARY_OP -> MINUS .)
    F32             reduce using rule 79 (UNARY_OP -> MINUS .)
    F64             reduce using rule 79 (UNARY_OP -> MINUS .)
    HEX_LIT         reduce using rule 79 (UNARY_OP -> MINUS .)
    OCTAL_LIT       reduce using rule 79 (UNARY_OP -> MINUS .)
    BINARY_LIT      reduce using rule 79 (UNARY_OP -> MINUS .)
    DECIMAL_LIT     reduce using rule 79 (UNARY_OP -> MINUS .)


state 25

    (15) primaryExpr -> conversion .
    LOGIC_AND       reduce using rule 15 (primaryExpr -> conversion .)
    LOGIC_OR        reduce using rule 15 (primaryExpr -> conversion .)
    SHR             reduce using rule 15 (primaryExpr -> conversion .)
    SHL             reduce using rule 15 (primaryExpr -> conversion .)
    AND             reduce using rule 15 (primaryExpr -> conversion .)
    MOD             reduce using rule 15 (primaryExpr -> conversion .)
    DIV             reduce using rule 15 (primaryExpr -> conversion .)
    STAR            reduce using rule 15 (primaryExpr -> conversion .)
    XOR             reduce using rule 15 (primaryExpr -> conversion .)
    OR              reduce using rule 15 (primaryExpr -> conversion .)
    MINUS           reduce using rule 15 (primaryExpr -> conversion .)
    PLUS            reduce using rule 15 (primaryExpr -> conversion .)
    GE              reduce using rule 15 (primaryExpr -> conversion .)
    GT              reduce using rule 15 (primaryExpr -> conversion .)
    LE              reduce using rule 15 (primaryExpr -> conversion .)
    LT              reduce using rule 15 (primaryExpr -> conversion .)
    NE              reduce using rule 15 (primaryExpr -> conversion .)
    EQ              reduce using rule 15 (primaryExpr -> conversion .)
    ,               reduce using rule 15 (primaryExpr -> conversion .)
    NEWL            reduce using rule 15 (primaryExpr -> conversion .)
    ;               reduce using rule 15 (primaryExpr -> conversion .)
    )               reduce using rule 15 (primaryExpr -> conversion .)


state 26

    (16) primaryExpr -> operand .
    LOGIC_AND       reduce using rule 16 (primaryExpr -> operand .)
    LOGIC_OR        reduce using rule 16 (primaryExpr -> operand .)
    SHR             reduce using rule 16 (primaryExpr -> operand .)
    SHL             reduce using rule 16 (primaryExpr -> operand .)
    AND             reduce using rule 16 (primaryExpr -> operand .)
    MOD             reduce using rule 16 (primaryExpr -> operand .)
    DIV             reduce using rule 16 (primaryExpr -> operand .)
    STAR            reduce using rule 16 (primaryExpr -> operand .)
    XOR             reduce using rule 16 (primaryExpr -> operand .)
    OR              reduce using rule 16 (primaryExpr -> operand .)
    MINUS           reduce using rule 16 (primaryExpr -> operand .)
    PLUS            reduce using rule 16 (primaryExpr -> operand .)
    GE              reduce using rule 16 (primaryExpr -> operand .)
    GT              reduce using rule 16 (primaryExpr -> operand .)
    LE              reduce using rule 16 (primaryExpr -> operand .)
    LT              reduce using rule 16 (primaryExpr -> operand .)
    NE              reduce using rule 16 (primaryExpr -> operand .)
    EQ              reduce using rule 16 (primaryExpr -> operand .)
    ,               reduce using rule 16 (primaryExpr -> operand .)
    NEWL            reduce using rule 16 (primaryExpr -> operand .)
    ;               reduce using rule 16 (primaryExpr -> operand .)
    )               reduce using rule 16 (primaryExpr -> operand .)


state 27

    (23) conversion -> type_ . ( expression )
    (               shift and go to state 85


state 28
